backend - duplicate tests removed